:lipstick: fix: number of cards presented and spacing between them

--- a/src/components/card_area/card_area.css
+++ b/src/components/card_area/card_area.css
@@ -8,7 +8,7 @@
   grid-template-columns: auto auto ;
   align-items: center;
   justify-content: center;
-  grid-gap: 10px;
+  grid-gap: 1vw;
 
   overflow: hidden;
 }
